--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,12 @@
 
 name: Build, push, and deploy
 
+env:
+    AKR_DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+    AKR_REGISTRY_NAME: registry.digitalocean.com/george-test-registry11
+    AKR_CLUSTER_NAME: george-cluster1
+    
+
 # Controls when the action will run.
 on:
   # Triggers the workflow on push request on the main branch for changes in the specified paths.
@@ -25,8 +31,8 @@ jobs:
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Set Parameters
-      run: set AKR_DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} ; set AKR_REGISTRY_NAME=registry.digitalocean.com/george-test-registry11 ; set AKR_CLUSTER_NAME=george-cluster1 ; echo '^^^^^^^^^^^^^^^^^^^^^^^^^^' ; env ; echo '=============================='
+    - name: Show Parameters
+      run: env | sort
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
     - name: Checkout master
